--- a/pylint.yml
+++ b/pylint.yml
@@ -26,4 +26,4 @@ jobs:
           repository: .
           commit_user_name: alexprasetyo
           commit_user_email: yogipratama020602@gmail.com 
-          commit_author: vckyou <yogipratama020602@gmail.com>
+          commit_author: alexprasetyo <yogipratama020602@gmail.com>
